// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map renders 1`] = `
Array [
  <div
    className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
  />,
  <div
    className="m-vehicle-map"
    id="id-vehicle-map"
  />,
]
`;

exports[`map renders with train vehicles 1`] = `
<div
  className="m-vehicle-map"
  id="id-vehicle-map"
/>
`;
